--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
     padding: 0;
     text-align: center;
     background-color: #f4f6f9;
-    color: #2c3e50;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -19,7 +18,6 @@ main {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    color: #2c3e50;
 }
 
 /* Secciones */
@@ -42,6 +40,10 @@ header {
     color: white;
 }
 
+h2{
+    font-size: 27px; 
+}
+
 /* Contenedor del logo */
 .logo-container {
     display: flex;
@@ -53,7 +55,7 @@ header {
 
 /* Estilos del logo */
 .logo {
-    width: 150px;
+    width: 200px;
     height: auto;
     padding: 10px;
     border-radius: 10px;
@@ -92,6 +94,7 @@ nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    font-size: 22px;
 }
 
 /* Estilo del footer */
@@ -115,11 +118,12 @@ footer {
     border-radius: 5px;
     font-size: 18px;
     margin-bottom: 10px;
-    width: 200px; /* Asegura un ancho uniforme */
+    width: 150px; 
+    font-size: 20px;
 }
 
 #contacto a i {
-    font-size: 20px;
+    font-size: 25px;
 }
 
 /* Estilo específico para Facebook */
@@ -140,44 +144,61 @@ footer {
     background-color: #C13584;
 }
 
-/* Estilo de los cursos */
+#inicio P {
+    font-size: 20px;
+}
+
+#nosotros P {
+    font-size: 20px;
+}
+
 #servicios ul li {
     list-style: none;
-    padding: 10px;
-    background-color: rgba(33, 150, 243, 0);
+    padding: 10px 10px 10px 40px; 
+    background-color: rgba(33, 150, 243, 0.5);
     margin: 10px 0;
     cursor: pointer;
     transition: background-color 0.3s ease;
     border-radius: 5px;
     color: white;
+    font-size: 20px;
+    position: relative; 
 }
+
+#servicios ul li::before {
+    content: "🎓"; 
+    position: absolute;
+    left: 300px;
+    top: 0; 
+    font-size: 26px;
+}
+
+
 
 #servicios ul li.curso:hover {
     background-color: rgba(231, 231, 231, 0.7);
     color: black;
 }
 
-/* Información del curso siempre visible con fondo blanco */
 #servicios ul li .informacion {
     display: none;
     margin-top: 10px;
-    background-color: #ffffff; /* Fondo blanco */
-    color: #2c3e50; /* Texto negro */
+    background-color: rgba(231, 231, 231, 0.5);
+    color: black; 
     padding: 10px;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 17px;
 }
 
 #servicios ul li.active .informacion {
     display: block;
 }
 
-/* Estilo del correo */
 .correo, .whatsapp {
     display: inline-flex;
     align-items: center;
     gap: 10px;
-    font-size: 18px;
+    font-size: 20px;
     color: white;
     padding: 10px 15px;
     border-radius: 5px;
@@ -186,13 +207,13 @@ footer {
 }
 
 .correo {
-    background-color: #D44638; /* Color de Gmail */
+    background-color: #D44638; 
 }
 
 .whatsapp {
-    background-color: #25D366; /* Color de WhatsApp */
+    background-color: #25D366; 
 }
 
 .correo i, .whatsapp i {
-    font-size: 20px;
+    font-size: 25px;
 }
